[package]
name = "revoltrs"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
description = "A Rust library for Revolt!"
keywords = ["revolt-lib", "revolt"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
rusty_ulid = "0.11.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.26"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }